# json-on-the-clocktower

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  new-character.sh  package.json  pyproject.toml
.changes/: 0.0.2.md  0.0.3.md  0.0.4.md  0.0.5.md  0.0.6.md  0.0.7.md  0.0.8.md  0.0.9.md
.changes/unreleased/: Added-20230525-164900.yaml  Added-20230525-165221.yaml  Added-20230525-173226.yaml  Added-20230526-120227.yaml  Added-20230607-085245.yaml  Added-20230609-151125.yaml  Added-20230611-212514.yaml  Added-20230611-214350.yaml  Added-20230611-224756.yaml  Added-20230611-231617.yaml  (+16 more)
.changeset/: absolute-aqua-anteater.md  angry-lies-call.md  breezy-terms-taste.md  chatty-ads-enjoy.md  chatty-deers-provide.md  chilled-phones-repeat.md  chilly-ears-fry.md  clever-suns-judge.md  config.json  cool-deers-yell.md  dirty-jokes-report.md  dirty-kings-hammer.md  eighty-meals-return.md  fair-years-juggle.md  famous-fishes-enjoy.md  fancy-tan-barracuda.md  fast-clouds-run.md  fluffy-zebras-accept.md  fragile-coffee-albatross.md  gold-panthers-tease.md  healthy-knives-yawn.md  hidden-purple-partridge.md  itchy-numbers-drop.md  itchy-weeks-attack.md  kind-feet-press.md  loud-pots-attend.md  lovely-boxes-kneel.md  military-tan-quail.md  modern-ties-mix.md  modest-pink-worm.md  nervous-amber-echidna.md  odd-jokes-sit.md  purring-white-locust.md  quick-avocados-sing.md  quick-cycles-teach.md  rare-otters-carry.md  rare-steaks-travel.md  rolling-green-echidna.md  rude-foxes-clap.md  sensitive-chocolate-meadowlark.md  (+17 more)
.github/: dependabot-changeset.template.md  dependabot.yml  labeler.yml
data/: edition-info.json  role-edition.json  roles-nightmeta.json
melder/: cli.py  util.py
morph/: cli.py  external_md5.py  util.py
(+32 files in other folders)
