[tool.poetry]
name = "json-on-the-clocktower"
version = "v0.0.14"
description = "Meld JSON resources into one processed file"
authors = ["Chisel <chisel@malik-wright.uk>"]
readme = "README.md"
packages = [{include = "morph"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
click = "^8.1.4"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.3.0"
types-requests = "^2.31.0.0"
pylint = "^2.17.4"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
